--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -61,7 +61,7 @@ button {
     flex-direction: column;
     width: 100%;
 
-    .single_note {
+    .note_display {
       word-break: break-all;
       margin-bottom: 1rem;
       max-height: 10rem;
